# konide

./: CMakeLists.txt  build.bat
demos/: CMakeLists.txt
demos/HelloTriangle/: CMakeLists.txt  main.cpp
konide/: CMakeLists.txt
konide/include/: konide.h
konide/include/konide/: composition.h  layer.h  material.h  proxy.h  renderer.h
konide/include/konide/generic/: KonideSceneLayer.h  KonideSceneProxy.h
konide/src/: composition.cpp  layer.cpp  proxy.cpp  renderer.cpp
konide/src/generic/: KonideSceneLayer.cpp
konide/src/vulkan/: vkloader.hpp
